--- a/src/App.css
+++ b/src/App.css
@@ -16,4 +16,12 @@ a#end{
 	border:1px solid red;
 	color:red;
 }
-
+html{
+	background-color: #A8D0DB;
+}
+h1{
+	color:#2B4570;
+}
+h4{
+	color:#2B4570;
+}
